--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -18,11 +18,7 @@
 
 <script>
   $(function() {
-    $('#new-form').submit(function(event){
-      event.preventDefault();
-      var textbox = $('.new-todo');
-      console.log("Task: ", textbox.val());
-    });
+
 
       function taskHtml(task) {
         var checkedStatus = task.done ? "checked" : "";
@@ -67,6 +63,26 @@
       $('.toggle').change(toggleTask);
 
      });
+
+
+    $('#new-form').submit(function(event){
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      var payload = {
+        task: {
+          title: textbox.val()
+        }
+      };
+      $.post("/tasks", payload).success(function(data) {
+        var htmlString = taskHtml(data);
+        var ulTodos = $('.todo-list');
+              ulTodos.append(htmlString);
+              $('.toggle').click(toggleTask);
+
+       });
+    });
+
+
   });
 
 </script>
